--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="#">Yetay 2.0</a></li>
+          <li><a href="yetay2.html">Yetay 2.0</a></li>
+          <li><a href="remain.html" target="_blank">whatLeft</a></li>
         </ul>
       </nav>
     </div>
