--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="#">Yetay 2.0</a></li>
+          <li><a href="yetay2.html">Yetay 2.0</a></li>
+          <li><a href="remain.html" target="_blank">whatLeft</a></li>
         </ul>
       </nav>
       <img src="https://cdn.glitch.global/75a24ea2-773d-456a-8abd-1c76671f333c/yetay_white_logo.png?v=1748084558240" alt="Yetay Logo" class="logo">      
